[package]

name = "immutable-map"
version = "0.0.1"
license = "MIT/Apache-2.0"
description = "An immutable ordered map and set based on weight-balanced tree."

authors = [
  "Hyunkang Kim <kimhyunkang@gmail.com>"
]

repository = "https://github.com/kimhyunkang/immutable-map-rs.git"
keywords = ["data-structures", "functional"]
readme = "README.md"

[dependencies]
compare = "^0.0.6"
