[package]

name = "immutable-map"
version = "0.1.2"
license = "MIT/Apache-2.0"
description = "An immutable ordered map and set based on weight-balanced tree."

authors = [
  "Hyunkang Kim <kimhyunkang@gmail.com>"
]

documentation = "https://kimhyunkang.github.io/immutable-map-rs/doc/v0.1.2/immutable_map/"
repository = "https://github.com/kimhyunkang/immutable-map-rs.git"
keywords = ["data-structures", "functional"]
categories = ["data-structures"]
readme = "README.md"

[dev-dependencies]
quickcheck = "0.4"
rand = "0.3"
